--- a/www/index.html
+++ b/www/index.html
@@ -52,7 +52,7 @@ frame.on("ready", function() {
 
 	var manifest = [{id:"test", src:"b01.mp3"}];
 	var preload = new createjs.LoadQueue(false, "assets/");
-	preload.installPlugin(createjs.Sound);
+	// preload.installPlugin(createjs.Sound);
 	preload.on("complete", app);
 	preload.loadManifest(manifest);
 
