Going back to relative path until proven otherwise

--- a/www/index.html
+++ b/www/index.html
@@ -50,15 +50,17 @@ frame.on("ready", function() {
 	var stageW = frame.width;
 	var stageH = frame.height;
 
+	/*
 	function getPhoneGapPath() {
 	   var path = window.location.pathname;
 	   path = path.substr( path, path.length - 10 );
 	   return path;
 	   // android add 'file://'
 	};
+	*/
 
 	var manifest = [{id:"test", src:"b01.mp3"}];
-	var preload = new createjs.LoadQueue(false, getPhoneGapPath() + "/assets/");
+	var preload = new createjs.LoadQueue(false, "assets/");
 	preload.installPlugin(createjs.Sound);
 	preload.on("complete", app);
 	preload.loadManifest(manifest);
