See if breaking links causes a no load
Previously, it appeared to load but when I press the button no sound
plays.  the button does shift so the event is triggering fine.  So see
if the path was right - if this does not load.  If it loads, then it
still could be the path.

--- a/www/index.html
+++ b/www/index.html
@@ -59,7 +59,7 @@ frame.on("ready", function() {
 	};
 	*/
 
-	var manifest = [{id:"test", src:"b01.mp3"}];
+	var manifest = [{id:"test", src:"b01wwwwwwwwwww.mp3"}];
 	var preload = new createjs.LoadQueue(false, "assets/");
 	preload.installPlugin(createjs.Sound);
 	preload.on("complete", app);
