Okay - now set the path to the correct path
So, broken path shows circle - now lets set it to the assumed correct
path and see if the circle shows up

--- a/www/index.html
+++ b/www/index.html
@@ -59,10 +59,10 @@ frame.on("ready", function() {
 	};
 	*/
 
-	var manifest = [{id:"test", src:"b01sssssss.mp3"}];
+	var manifest = [{id:"test", src:"b01.mp3"}];
 	var preload = new createjs.LoadQueue(false, "assets/");
 	preload.installPlugin(createjs.Sound);
-	preload.on("error", function() {stage.addChild(new zim.Circle());})
+	preload.on("error", function() {stage.addChild(new zim.Circle(40."red"));})
 	preload.on("complete", app);
 	preload.loadManifest(manifest);
 
