--- a/www/index.html
+++ b/www/index.html
@@ -50,19 +50,21 @@ frame.on("ready", function() {
 	var stageW = frame.width;
 	var stageH = frame.height;
 
-	/*
+
 	function getPhoneGapPath() {
 	   var path = window.location.pathname;
 	   path = path.substr( path, path.length - 10 );
 	   return path;
 	   // android add 'file://'
 	};
-	*/
+
 
 	var manifest = [{id:"test", src:"b01.mp3"}];
 	var preload = new createjs.LoadQueue(true, "/assets/");
 	preload.installPlugin(createjs.Sound);
-	preload.on("error", function(e) {stage.addChild(zim.centerReg(new zim.Label(e.title + "\n" + e.message), stage));})
+	// preload.on("error", function(e) {stage.addChild(zim.centerReg(new zim.Label(e.title + "\n" + e.message), stage));})
+	preload.on("error", function(e) {stage.addChild(zim.centerReg(new zim.Label(getPhoneGapPath()), stage));})
+
 	preload.on("complete", app);
 	preload.loadManifest(manifest);
 
