--- a/www/index.html
+++ b/www/index.html
@@ -65,7 +65,7 @@ frame.on("ready", function() {
 	// preload.on("error", function(e) {stage.addChild(zim.centerReg(new zim.Label(e.title + "\n" + e.message), stage));})
 	preload.on("error", function(e) {
 		var label = new zim.Label(getPhoneGapPath(), 20);
-		label.rotation = 90;
+		zim.scaleTo(label, stage, 90, 90);
 		zim.centerReg(label, stage);
 	});
 
