--- a/www/index.html
+++ b/www/index.html
@@ -60,13 +60,15 @@ frame.on("ready", function() {
 
 
 	var manifest = [{id:"test", src:"b01.mp3"}];
-	var preload = new createjs.LoadQueue(true, "/www/assets/");
+	var preload = new createjs.LoadQueue(true, getPhoneGapPath() + "assets/");
 	preload.installPlugin(createjs.Sound);
 	// preload.on("error", function(e) {stage.addChild(zim.centerReg(new zim.Label(e.title + "\n" + e.message), stage));})
 	preload.on("error", function(e) {
-		var label = new zim.Label(getPhoneGapPath(), 20);
-		zim.scaleTo(label, stage, 90, 90);
-		zim.centerReg(label, stage);
+		var label = new zim.Label("getPhoneGapPath()", 20);
+		label.x = stageW - label.width;
+		label.y = stageH/2;
+		stage.addChild(label);
+		stage.update();
 	});
 
 	preload.on("complete", app);
@@ -74,7 +76,7 @@ frame.on("ready", function() {
 
 	function app(e) {
 		var but = new zim.Button();
-		//zim.centerReg(but, stage);
+		zim.centerReg(but, stage);
 		but.y += 200;
 		but.on("click", function(){
 			createjs.Sound.play("test");
