see if it loads sound

--- a/www/index.html
+++ b/www/index.html
@@ -59,7 +59,8 @@ frame.on("ready", function() {
 	   // android add 'file://'
 	};
 
-	var manifest = [{src:"back.jpg", id:"test"}];
+
+	var manifest = [{src:"back.jpg", id:"test"}, {src:"b01.mp3", id:"b"}];
 	var preload = new createjs.LoadQueue(false, "assets/");
 	preload.installPlugin(createjs.Sound);
 	preload.on("complete", function() {
