--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@ window.addEventListener("load", function() {
 
 
 	var manifest = [{src:"back.jpg", id:"test"}, {src:"b01.mp3", id:"b"}];
-	var preload = new createjs.LoadQueue(true, getPhoneGapPath() + "assets/");
+	var preload = new createjs.LoadQueue(false, getPhoneGapPath() + "assets/");
 	preload.installPlugin(createjs.Sound);
 	preload.on("complete", function() {
 		var underlay = new createjs.Bitmap(preload.getResult("test"));
