--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,20 @@ window.addEventListener("load", function() {
 	   // android add 'file://'
 	};
 
+	createjs.Sound.on("fileload", loadHandler);
+	createjs.Sound.registerSound("assets/backing.mp3", "sound");
+	function loadHandler(event) {
+		console.log("here");
+		var rect = new createjs.Shape();
+		rect.graphics.f("black").dr(0,0,100,100);
+		stage.addChild(rect);
+		rect.on("click", function() {
+			var instance = createjs.Sound.play("sound");  // play using id.  Could also use full sourcepath or event.src.
+		});
+		stage.update();
+	}
 
+/*
 	var manifest = [{src:"back.jpg", id:"test"}, {src:"backing.mp3", id:"b"}];
 	var preload = new createjs.LoadQueue(false, "assets/");
 	preload.installPlugin(createjs.Sound);
@@ -53,6 +66,7 @@ window.addEventListener("load", function() {
 		stage.update();
 	});
 	preload.loadManifest(manifest);
+	*/
 
 });
 
