Bring back CordovaAudioPlugin call in index
The createjs one...

--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
 <title>Vault 7 - Open Safe Puzzle - Dan Zen</title>
 
 <script src="libraries/createjs-2015.11.26.min.js"></script>
-<!-- <script src="libraries/CordovaAudioPlugin.js"></script> -->
+<script src="libraries/CordovaAudioPlugin.js"></script>
 <!-- or can go to zimjs.com and createjs.com for individual modules -->
 
 <style>
